--- a/src/components/Layout/HeaderCart.module.css
+++ b/src/components/Layout/HeaderCart.module.css
@@ -4,12 +4,14 @@
   border: none;
   background-color: #4d1601;
   color: white;
-  padding: 0.75rem 3rem;
+  padding: 0.75rem 3rem; /* Adjusted padding */
   display: flex;
   justify-content: space-around;
   align-items: center;
   border-radius: 25px;
   font-weight: bold;
+  position: relative; /* Add position relative */
+  margin: left 1px; /* Adjusted position to move slightly left */
 }
 
 .button:hover,
@@ -27,33 +29,11 @@
   background-color: #b94517;
   padding: 0.25rem 1rem;
   border-radius: 25px;
-  margin-left: 1rem;
+  margin-left: 0.5rem;
   font-weight: bold;
 }
 
 .button:hover .badge,
 .button:active .badge {
   background-color: #92320c;
-}
-
-.bump {
-  animation: bump 300ms ease-out;
-}
-
-@keyframes bump {
-  0% {
-    transform: scale(1);
-  }
-  10% {
-    transform: scale(0.9);
-  }
-  30% {
-    transform: scale(1.1);
-  }
-  50% {
-    transform: scale(1.15);
-  }
-  100% {
-    transform: scale(1);
-  }
 }
