--- a/src/components/Meals/MealItem/MealItem.module.css
+++ b/src/components/Meals/MealItem/MealItem.module.css
@@ -20,3 +20,17 @@
   color: #ad5502;
   font-size: 1.25rem;
 }
+
+.addbutton {
+  background-color: #4d1601;
+  color: white;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.addbutton:hover {
+  background-color: #2c0d00;
+}
